[gd_scene load_steps=2 format=3 uid="uid://cfhmdyjuhsxsd"]

[ext_resource type="Script" uid="uid://cshp1ojsbsfr2" path="res://scenes/ui/item_view.gd" id="1_g86p4"]

[node name="ItemView" type="TextureRect"]
tooltip_text = "Click and hold to drag the item.
Press RMB to take item in right hand."
expand_mode = 1
script = ExtResource("1_g86p4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(6.64204e-06, 0.747957, 0.748636, 0)

[node name="Quantity" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 14.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="CdLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CdTimer" type="Timer" parent="."]
one_shot = true

[node name="CdTimerTemp" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="CdTimer" to="." method="_on_cd_timer_timeout"]
[connection signal="timeout" from="CdTimerTemp" to="." method="_on_cd_timer_temp_timeout"]
